--- a/src/style/modal.css
+++ b/src/style/modal.css
@@ -56,13 +56,17 @@
 @media screen and (max-width:800px){
 	.modal-box{
 		background-image: linear-gradient(211deg, #3c3e64, #1d1e2a);
-  	box-shadow: 0 1px 0 0 #ffffff, 0 -1px 0 0 #ffffff;
 		width: 100vw;
-		height: 100vh;
+		overflow-y: auto;
+		position: fixed;
 		left: 0;
 		top: 0;
 		margin-left: 0;
 		margin-top: 0;
 		border-radius: 0;
+	}
+	.backdrop {
+		background-image: linear-gradient(211deg, #3c3e64, #1d1e2a);
+		background-color: rgba(0,0,0,1);
 	}
 }
